Bug 107767 - Segfault with standalone compiler and --dump-builder
Summary: Segfault with standalone compiler and --dump-builder
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: glsl-compiler (show other bugs)
Version: git
Hardware: All All
: medium normal
Assignee: mesa-dev
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-31 09:46 UTC by Sergii Romantsov
Modified: 2019-07-29 14:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
shader_big.frag - shader causes segfault (317 bytes, text/plain)
2018-08-31 09:46 UTC, Sergii Romantsov
Details

Description Sergii Romantsov 2018-08-31 09:46:40 UTC
Created attachment 141392 [details]
shader_big.frag - shader causes segfault

Usage of command
mesa/src/compiler/glsl_compiler --version 450 --dump-builder ./shader_big.frag
gives segfault with git-master 3e04c67950fe3edcabedc72516de63c5c20510e2
Comment 1 Sergii Romantsov 2018-08-31 09:52:52 UTC
Patch series: https://patchwork.freedesktop.org/series/48998/
Comment 2 Ian Romanick 2019-02-08 20:22:45 UTC
I'm not surprised.  The --dump-builder option of the stand-alone compiler was added to support generating int64 lowering functions from GLSL.  I had no expectation that anyone would use that option for anything else.

I would also not be surprised if there were a bunch of other things that didn't work.  Unless we have use cases, I don't know if there's a lot of value in fixing these issues.  I will also reply to your MR (https://gitlab.freedesktop.org/mesa/mesa/merge_requests/201/diffs).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.